# PhosphoLingo

./: CHANGELOG.md  README.rst  pyproject.toml
configs/: ESM1_small_conv.json  ESM1_small_full.json  ESM1_small_linear.json  ESM1b_conv.json  ESM1b_full.json  ESM1b_linear.json  ProtT5_XL_U50.json  ProtTransXL_conv.json  ProtTransXL_full.json  ProtTransXL_linear.json  onehot.json
data/DeepPSP/ST/: fold1.fasta  fold5.fasta  fold9.fasta  valid.fasta
data/Giansanti15/AspN/: fold0.fasta  fold1.fasta  fold2.fasta  fold3.fasta  fold4.fasta  fold5.fasta  fold6.fasta  fold7.fasta  fold8.fasta  fold9.fasta  test.fasta  train.fasta  valid.fasta
data/Giansanti15/Chymotrypsin/: fold0.fasta  fold1.fasta  fold2.fasta  fold3.fasta  fold4.fasta  fold5.fasta  fold6.fasta  fold7.fasta  fold8.fasta  fold9.fasta  test.fasta  train.fasta  valid.fasta
data/Giansanti15/GluC/: fold0.fasta  fold1.fasta  fold2.fasta  fold3.fasta  fold4.fasta  fold5.fasta  fold6.fasta  fold7.fasta  fold8.fasta  fold9.fasta  test.fasta  train.fasta  valid.fasta
data/Giansanti15/LysC/: fold0.fasta  fold1.fasta  fold2.fasta  fold3.fasta  fold4.fasta  fold5.fasta  fold6.fasta  fold7.fasta  fold8.fasta  fold9.fasta  test.fasta  train.fasta  valid.fasta
data/Giansanti15/Trypsin/: fold0.fasta  fold1.fasta  fold2.fasta  fold3.fasta  fold4.fasta  fold5.fasta  fold6.fasta  fold7.fasta  fold8.fasta  (+4 more)
phospholingo/: __main__.py  input_reader.py  input_tokenizers.py  lightning_module.py  network_architectures.py  predict.py  train.py  utils.py  visualize.py  visualize_shuffling.py
predictions/: preds_swissprot_Y.csv
(+225 files in other folders)
