[tool.poetry]
name = "phospholingo"
version = "0.1.0"
description = ""
authors = ["Jasper Zuallaert"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.12"
pytorch-lightning = "^1.7.7"
transformers = "^4.23.1"
fair-esm = "^1.0.3"
biopython = "^1.79"
captum = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
