[tool.poetry]
name = "phospholingo"
version = "0.2.0"
description = ""
authors = ["Jasper Zuallaert"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13"
pytorch-lightning = "^1.7.7"
transformers = "^4.23.1"
fair-esm = "^1.0.3"
biopython = "^1.79"
captum = "^0.5.0"
logomaker = "^0.8"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
ankh = "^1.0.0"
sequence-models = "^1.6.0"
torchmetrics = "0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
